pyarmor.error.log
39941 MainProcess 2024-10-20 19:09:10,663
Traceback (most recent call last):
  File "/home/ed/.local/lib/python3.10/site-packages/pyarmor/cli/__main__.py", line 754, in main
    main_entry(sys.argv[1:])
  File "/home/ed/.local/lib/python3.10/site-packages/pyarmor/cli/__main__.py", line 742, in main_entry
    return args.func(ctx, args)
  File "/home/ed/.local/lib/python3.10/site-packages/pyarmor/cli/__main__.py", line 244, in cmd_gen
    builder.process(options)
  File "/home/ed/.local/lib/python3.10/site-packages/pyarmor/cli/generate.py", line 188, in process
    self._obfuscate_scripts()
  File "/home/ed/.local/lib/python3.10/site-packages/pyarmor/cli/generate.py", line 144, in _obfuscate_scripts
    code = Pytransform3.generate_obfuscated_script(self.ctx, r)
  File "/home/ed/.local/lib/python3.10/site-packages/pyarmor/cli/core/__init__.py", line 93, in generate_obfuscated_script
    return m.generate_obfuscated_script(ctx, res)
  File "<maker>", line 716, in generate_obfuscated_script
  File "/home/ed/.local/lib/python3.10/site-packages/pyarmor/cli/__init__.py", line 16, in process
    return meth(self, res, *args, **kwargs)
  File "<maker>", line 515, in process
  File "/home/ed/.local/lib/python3.10/site-packages/pyarmor/cli/resource.py", line 144, in reparse
    self.mtree = ast.parse(''.join(lines), self.frozenname, 'exec')
  File "/usr/lib/python3.10/ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
  File "<frozen pyarmor.error>", line 1
    39831 MainProcess 2024-10-20 19:08:41,517
                                    ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
